--- a/Fly.WebUI/Views/Tickets/Index.cshtml
+++ b/Fly.WebUI/Views/Tickets/Index.cshtml
@@ -9,31 +9,31 @@
         <form asp-action="Index">
             <div class="row">
                 <div class="form-group">
-                    <label class="col">PriceMax</label>
+                    <label class="col">@SharedLocalizer["Price Max"]</label>
                     <input asp-for="TicketParameter.PriceMax" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label class="col">PriceMin</label>
+                    <label class="col">@SharedLocalizer["Price Min"]</label>
                     <input asp-for="TicketParameter.PriceMin" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label class="col">TicketState</label>
+                    <label class="col">@SharedLocalizer["State"]</label>
                     <input asp-for="TicketParameter.TicketState" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label class="col">DepartureDateTime</label>
+                    <label class="col">@SharedLocalizer["Departure Date"]</label>
                     <input asp-for="TicketParameter.DepartureDateTime" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label class="col"></label>
+                    <label class="col">@SharedLocalizer["Departure City"]</label>
                     <input asp-for="TicketParameter.DepartureCity" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label class="col">DepartureCity</label>
+                    <label class="col">@SharedLocalizer["Arrival City"]</label>
                     <input asp-for="TicketParameter.ArrivalCity" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label class="col">SeatClass</label>
+                    <label class="col">@SharedLocalizer["Class"]</label>
                     <input asp-for="TicketParameter.SeatClass" class="form-control" />
                 </div>
                 @Html.HiddenFor(x=>x.RedirectUri)
@@ -41,19 +41,19 @@
 
                 <div class="row">
                     <div class="col">
-                        <label> OrderBy </label>
+                        <label> @SharedLocalizer["Order By"] </label>
                         @Html.DropDownListFor(x => x.TicketParameter.OrderBy,
                         new List<SelectListItem>
                         {
                             new SelectListItem{ Value = "Id", Text= "Id"},
-                            new SelectListItem{ Value = "Price", Text= "Price"},
-                            new SelectListItem{ Value = "SoldDate", Text= "SoldDate"}
+                            new SelectListItem{ Value = "Price", Text= SharedLocalizer["Price"].Value},
+                        new SelectListItem{ Value = "SoldDate", Text= SharedLocalizer["Sold Date"].Value}
                         }, new { @class = "form-select"} )
                     </div>
 
                     <div class="col">
                         <br />
-                        <label> Descresing </label>
+                        <label>@SharedLocalizer["By Decreasing"] </label>
                         @Html.CheckBoxFor(x=>x.TicketParameter.Descresing)
                     </div>
                 </div>
@@ -66,34 +66,34 @@
                 <div class="card-body">
                     @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
                     {
-                        @Html.ActionLink("Create", "Create")
+                        @Html.ActionLink(SharedLocalizer["Create"].Value, "Create")
                     }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
                                 <th>
-                                    Price
+                                    @SharedLocalizer["Price"]
                                 </th>
                                 <th>
-                                    Ticket State
+                                    @SharedLocalizer["State"]
                                 </th>
                                 <th>
-                                    Sold Date
+                                    @SharedLocalizer["Sold Date"]
                                 </th>
                                 <th>
-                                    Departure
+                                    @SharedLocalizer["Departure"]
                                 </th>
                                 <th>
-                                    Arrival
+                                    @SharedLocalizer["Arrival"]
                                 </th>
                                 <th>
-                                    Class
+                                    @SharedLocalizer["Class"]
                                 </th>
                                 <th>
-                                    Name
+                                    @SharedLocalizer["First Name"]
                                 </th>
                                 <th>
-                                    Last Name
+                                    @SharedLocalizer["Last Name"]
                                 </th>
                                 <th>
                                     
@@ -101,50 +101,50 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var item in Model.PagedResponse)
+                        @foreach (var item in Model.PagedResponse)
                         {
                             <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Price)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.TicketState)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.SoldDate)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Flight.DepartureDateTime)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Flight.ArrivalDateTime)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Seat.SeatClass)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Passenger.FirstName)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Passenger.LastName)
-                                    </td>
-                                    <td>
-                                        @if(Model.IsSelect)
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Price)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TicketState)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SoldDate)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Flight.DepartureDateTime)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Flight.ArrivalDateTime)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Seat.SeatClass)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Passenger.FirstName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Passenger.LastName)
+                                </td>
+                                <td>
+                                    @if (Model.IsSelect)
+                                    {
+                                        @Html.ActionLink(SharedLocalizer["Select"].Value,"Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                    }
+                                    else
+                                    {
+                                        @if (User.IsInRole("Administrator"))
                                         {
-                                            @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                            @Html.ActionLink(SharedLocalizer["Edit"].Value, "Edit", new { id = item.Id })
+                                            <br />
+                                            @Html.ActionLink(SharedLocalizer["Delete"].Value, "Delete", new { id = item.Id })
                                         }
-                                        else
-                                        {
-                                            @if (User.IsInRole("Administrator"))
-                                            {
-                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                                <br />
-                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                            }
-                                        }
-                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
-                                    </td>
-                                </tr>
+                                    }
+                                    @Html.ActionLink(SharedLocalizer["Details"].Value, "Details", new { id=item.Id })
+                                </td>
+                            </tr>
                         }
                         </tbody>
                     </table>
@@ -156,17 +156,17 @@
                     <input hidden="true" asp-for="MetaData.CurrentPage" value="@Model.MetaData.CurrentPage" id="pageNumber" class="form-control" />
                 </div>
                 @if (Model.MetaData.HasPrevious)
-            {
+                {
                     <div class="col">
-                            <input type="submit" value="Prev" onclick="decrementValue()" class="btn btn-outline-primary" />
-                        </div>
-            }
+                        <input type="submit" value="@SharedLocalizer["Prev"]" onclick="decrementValue()" class="btn btn-outline-primary" />
+                    </div>
+                }
                 @if (Model.MetaData.HasNext)
-            {
+                {
                     <div class="col">
-                            <input type="submit" value="Next" onclick="incrementValue()" class="btn btn-outline-primary" />
-                        </div>
-            }
+                        <input type="submit" value="@SharedLocalizer["Next"]" onclick="incrementValue()" class="btn btn-outline-primary" />
+                    </div>
+                }
             </div>
         </form>
     </div>
