--- a/Fly.IdentityServer/Pages/Account/Register/Manager.cshtml
+++ b/Fly.IdentityServer/Pages/Account/Register/Manager.cshtml
@@ -41,7 +41,10 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Airline Id</label>
-                <input asp-for="ManagerForRegistrationDto.AirlineId" class="form-control" />
+                @Html.DropDownListFor(
+                    x=>x.ManagerForRegistrationDto.AirlineId,
+                    Model.Airlines, new { @class = "form-control" })
+
                 <span asp-validation-for="ManagerForRegistrationDto.AirlineId"></span>
             </div>
             <br />
